Cycles Bevel Shader works across objects with Embree / CPU #79723

Closed
opened 2020-08-11 23:13:11 +02:00 by Steffen Dünner · 13 comments

System Information
Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.51.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-11 20:18, hash: ec5f392087
Worked: never (?)

Short description of error
The Bevel shader gives different results with CPU vs. GPU.
I know that Optix doesn't support the Bevel shader at the moment but I'm talking about CUDA so that isn't the reason for it to not work.
The geometry in the repro blend file is split. The front and the rim polygons are in two different objects but they share the same material.

Exact steps for others to reproduce the error

  • Open the attached blend file:
    Bevel_v01.blend
  • Press F12 (= GPU used for rendering, just make sure it's set up correctly depending on your configuration):
    Bevel_GPU.png
  • Switch the rendering device to CPU and press F12 again:
    Bevel_CPU.png

Now there's a bevelled edge that isn't there when using GPU rendering.

**System Information** Operating system: Linux-5.4.0-42-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.51.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-11 20:18, hash: `ec5f392087` Worked: never (?) **Short description of error** The Bevel shader gives different results with CPU vs. GPU. I know that Optix doesn't support the Bevel shader at the moment but I'm talking about CUDA so that isn't the reason for it to not work. The geometry in the repro blend file is split. The front and the rim polygons are in two different objects but they share the same material. **Exact steps for others to reproduce the error** - Open the attached blend file: [Bevel_v01.blend](https://archive.blender.org/developer/F8770661/Bevel_v01.blend) - Press F12 (= GPU used for rendering, just make sure it's set up correctly depending on your configuration): ![Bevel_GPU.png](https://archive.blender.org/developer/F8770663/Bevel_GPU.png) - Switch the rendering device to CPU and press F12 again: ![Bevel_CPU.png](https://archive.blender.org/developer/F8770666/Bevel_CPU.png) Now there's a bevelled edge that isn't there when using GPU rendering.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @bent

Added subscriber: @bent
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

As you said, it works if the meshes are joined.

In 2.83, this doesnt even work on CPU across object boundaries afaict, something changed for the better already.
(Havent checked the exact commit where this improved)

But can confirm, it is not working on GPU for me either.
For comparison: Ambient Occlusion does work across object boundaries.

As you said, it works if the meshes are joined. In 2.83, this doesnt even work on CPU across object boundaries afaict, something changed for the better already. (Havent checked the exact commit where this improved) But can confirm, it is not working on GPU for me either. For comparison: `Ambient Occlusion` does work across object boundaries.
Philipp Oeser changed title from Cycles Bevel Shader Difference CPU vs. GPU (CUDA) to Cycles Bevel Shader doesnt seem to work across object boundaries on CUDA (works on CPU) 2020-08-12 15:10:46 +02:00

Added subscribers: @Stefan_Werner, @brecht

Added subscribers: @Stefan_Werner, @brecht

It's not supposed to have an effect across objects. The bug here is in the Embree integration.

@Stefan_Werner, can you have a look?

It's not supposed to have an effect across objects. The bug here is in the Embree integration. @Stefan_Werner, can you have a look?
Brecht Van Lommel changed title from Cycles Bevel Shader doesnt seem to work across object boundaries on CUDA (works on CPU) to Cycles Bevel Shader works across objects with Embree / CPU 2020-08-12 15:53:29 +02:00
Stefan Werner self-assigned this 2020-08-17 16:01:43 +02:00

This issue was referenced by blender/cycles@8d206e13b3

This issue was referenced by blender/cycles@8d206e13b3d5c398c0e2bd24417337af753c2616

This issue was referenced by 1c892e6814

This issue was referenced by 1c892e6814adf7431aa9abbe1bd560547f7144d2

This issue was referenced by d88721879b

This issue was referenced by d88721879b942641384612d888a8e785b96ef0f5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

@brecht Should we merge the fix to 2.90?

@brecht Should we merge the fix to 2.90?

Yes, this seems fine to backport to 2.90.

Yes, this seems fine to backport to 2.90.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79723
No description provided.