Cycles: Fix local intersections in Embree for non-instancd geometry.

Embree's occlusion filter was checking against the wrong object ID
and not exiting correctly in case of a mismatch.

Fixes T79723